--- a/Class07 Exercises.ipynb
+++ b/Class07 Exercises.ipynb
@@ -107,13 +107,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'fs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-90db63593041>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# 10s\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mten_sec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mfs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mwindowed_signal\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlfp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mten_sec\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mten_sec\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwindow\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mfs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'fs' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# 10s\n",
     "ten_sec = 10*fs\n",
-    "one_sec_signal = lfp[ten_sec:ten_sec+(window*fs)]"
+    "windowed_signal = lfp[ten_sec:ten_sec+(window*fs)]"
    ]
   },
   {
@@ -145,7 +157,7 @@
     }
    ],
    "source": [
-    "plt.plot(one_sec_signal)\n",
+    "plt.plot(windowed_signal)\n",
     "plt.xlim([28845, 29050])"
    ]
   },
