--- a/final_project/Final project.ipynb
+++ b/final_project/Final project.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,12 +17,13 @@
     "from scipy.io import loadmat\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from scipy.signal import butter, lfilter"
+    "from scipy.signal import butter, lfilter\n",
+    "from scipy.stats import ttest_ind"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -119,7 +120,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +193,7 @@
        "Ttest_indResult(statistic=0.46056973475000906, pvalue=0.6477323124849408)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +213,7 @@
        "Ttest_indResult(statistic=2.3605757888961683, pvalue=0.02348078431645061)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -237,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -248,7 +249,7 @@
        "Ttest_indResult(statistic=2.832132295451007, pvalue=0.007356349735074196)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -273,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +283,7 @@
        "Ttest_indResult(statistic=5.714172013921853, pvalue=1.4043857443695016e-06)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
